@@ -8,6 +8,10 @@
 
 	* NAMESPACE: Do not export anytime_cpp
 
+	* R/anytime.R: Add copyright header
+	* R/utils.R: Ditto
+	* R/init.R: Ditto
+
 2016-09-11  Dirk Eddelbuettel  <edd@debian.org>
 
 	* R/anytime.R (anydate): New function reducing to Date
